Cycles: Light Linking disabled after modifying object #108250

Closed
opened 2023-05-25 03:53:07 +02:00 by Sun Kim · 3 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-24 12:11, hash: ba3f26fac58e
Worked: n/a

Short description of error
If you edit (switch to edit mode, rename, transform...) a receiver object it no longer receives light. It fixes if you undo.

Exact steps for others to reproduce the error

  • Set light link between a light and an object
  • Edit the object (switch to edit mode, rename, transform...)
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-24 12:11, hash: `ba3f26fac58e` Worked: n/a **Short description of error** If you edit (switch to edit mode, rename, transform...) a receiver object it no longer receives light. It fixes if you undo. **Exact steps for others to reproduce the error** - Set light link between a light and an object - Edit the object (switch to edit mode, rename, transform...)
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-25 03:53:08 +02:00
Author
Contributor

Updated.

Sorry I accidentally pressed enter while writing the title. I'll update the report...

Updated. ~~Sorry I accidentally pressed enter while writing the title. I'll update the report...~~
Sun Kim changed title from Cycles: Light Linking disabled after modifity object to Cycles: Light Linking disabled after modifying object 2023-05-25 03:55:14 +02:00
Member

Thanks for the report. I can confirm

Thanks for the report. I can confirm
Pratik Borhade added
Module
Render & Cycles
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-25 07:33:00 +02:00
Member

cc @Sergey

cc @Sergey
Sergey Sharybin self-assigned this 2023-05-25 10:00:45 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-25 12:59:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108250
No description provided.